--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  todo
+  <input class="search" type="text">
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
