Add basic setup

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <input class="search" type="text">
+  <input class="search" type="text" placeholder="search xkcd">
+  <div id="container"> </div>
+
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="js/freewall.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
