--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="container"></div>
 
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="js/freetile.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
